fix the flicker

--- a/src/index.css
+++ b/src/index.css
@@ -19,7 +19,7 @@ img {
   height: 90vh;
 
   position: absolute;
-  top: 0;
+  /* top: 0; */
   left: 0;
   right: 0;
   bottom: 0;
